--- a/main.html
+++ b/main.html
@@ -8,6 +8,73 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment 3</h1>
+	<table id="table-1" class="middle">
+    <tr>
+      <td id="t11">left</td>
+      <td id="t12" class="center">center</td>
+      <td id="t13" class="right">right</td>
+    </tr>
+    <tr>
+      <td>left</td>
+      <td class="center">center</td>
+      <td class="right">right</td>
+    </tr>
+    <tr>
+      <td>left</td>
+      <td class="center">center</td>
+      <td class="right">right</td>
+    </tr>
+  </table>
+
+	<table class="middle" id="table-2">
+		<tr>
+      <td id="t21" colspan="6"></td>
+    </tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td> 
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2" colspan="3"></td>
+			<td ></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+
+	<table id="table-3" class="middle">
+    <tr class="green">
+      <td colspan="6">Green Row</td>
+    </tr>
+    <tr>
+		<td ></td>
+      <td id="t-image">
+        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Table Image">
+      </td>
+		<td></td>
+    </tr>
+    <tr class="blue">
+      <td colspan="6">Blue Row</td>
+    </tr>
+  </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
